[package]
name = "mikanos_kernel_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = {version = "0.7.2", default-features = false}
arrform = "0.1.1"
bit_field = "0.10.1"
spin = "0.9.3"
x86_64 = "0.14.9"
mikanos_usb_driver = { path = "../mikanos_usb_driver" }
